cleanup of demo layout

--- a/t5-tree/src/main/java/todo.txt
+++ b/t5-tree/src/main/java/todo.txt
@@ -14,4 +14,4 @@ todo
 * 'expanded'/'collapsed' instead of 'opened'/'closed'
 * styling of FileTree
 * push tree elements onto the Environment
-
+* animation with lazy loading
