connected check state across lazy loads

--- a/t5-tree/src/main/java/todo.txt
+++ b/t5-tree/src/main/java/todo.txt
@@ -10,4 +10,9 @@ todo
 * push tree elements onto the Environment?
 * looped example for explicit tree - department, section, employee
 * styling: folder without children
+* separate out a TreeStyleModel?
+* Attribute showFlexibleStyling (with default=false) --> reduce HTML by default(?)
+* override checked state of lazily loaded nodes? But how? We really need to know if the parent node's state is indeterminate - unsure if even that helps
 
+* checked tree
+  * show check box for leaf nodes
