--- a/t5-tree/src/main/java/todo.txt
+++ b/t5-tree/src/main/java/todo.txt
@@ -10,8 +10,10 @@ todo
 * looped example for explicit tree - department, section, employee
 * styling: folder without children
 * Attribute showFlexibleStyling (with default=false) --> reduce HTML by default(?)
-* override checked state of lazily loaded nodes? But how? We really need to know if the parent node's state is indeterminate - unsure if even that helps
-	* separate out a TreeStyleModel?
+* use parent checked state for checked state of lazily loaded nodes? But how? We really need to know if the parent node's state is indeterminate - unsure if even that helps
+* separate out a TreeStyleModel?
+* provide acccess to the different parts of each tree node --> allow clients to register listeners
+
 
 * checked tree
   * styling
