--- a/t5-tree/src/main/java/todo.txt
+++ b/t5-tree/src/main/java/todo.txt
@@ -23,7 +23,7 @@ todo
   
 * TreeNode
 //TODO konfigurierbar, ob nur +/- oder die ganze Titelzeile auf- und zuklappen
-//TODO Animation optimieren: zunächst +/- Icon auf "transition"-Icon setzen, dann Animation, dann auf anderes Icon setzen
+//TODO Animation optimieren: zunaechst +/- Icon auf "transition"-Icon setzen, dann Animation, dann auf anderes Icon setzen
 //TODO JS Contribution, die Elemente "children-of-{id}" und "descendents-of-{id}"-Klassen fuer Kinder / Enkel von TreeNodes erzeugt - oder ThreadLocal beim Rendering im Server, der mithaelt?
 //TODO class or optional block as default for before-row-content
 
